--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,9 @@
     "prefer-stable": true,
     "post-install-cmd": [
         "php artisan clear-compiled",
+        "php artisan cache:clear",
+        "php artisan config:clear",
+        "php artisan migrate --force",
         "chmod -R 777 public/"
     ]
 }
